// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox checked 1`] = `
<input
  checked={true}
  className="emotion-1"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox empty 1`] = `
<input
  checked={false}
  className="emotion-1"
  onChange={[Function]}
  type="checkbox"
/>
`;
